# trust-copilot

./: .curl_cookies.txt  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tmp_cookies.txt  .tmp_job259.json  .tmp_job_result.json  README.md  TICKETS.md  backlog.html  deploy.sh  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  ruff.toml
apps/api/: Dockerfile  alembic.ini  benchmark_phase4_report.json  docker-entrypoint.sh  pyproject.toml  seed-qa-out.txt  test_results.json  test_results_10ds.json
apps/api/alembic/: env.py
apps/api/app/: main.py  worker.py
apps/api/scripts/: README.md  audit_questionnaire_mapping_quality.py  check_env_runtime.py  detect_stuck_jobs.py  dev_compliance_catalog.py  ensure_ai_test_data.py  generate-fixtures.py  generate_mock_docs.py  merge_dev_duplicate_soc2_framework.py  purge_audit_retention.py  qnr_130_mapping_audit.csv  qnr_130_mapping_audit.json  queue_index_uploaded_docs.py  seed_demo_workspace.py  seed_dev_compliance_catalog.py  seed_e2e_registry.py  seed_qa_test_data.py  verify_mappings_list_performance.py
apps/api/tests/: _inspect_blind.py  _run_blind_full.py  conftest.py  e2e_pipeline_test.py  fetch_ds5.py  fetch_full_qa.py  full_ui_backend_test.py  pipeline_data_audit.py  pipeline_deep_audit.py  run_10dataset_test.py  run_3dataset_test.py  test_ai_mappings.py  test_alert_management.py  test_alerting_engine.py  test_alerting_verification.py  test_alerts_api.py  test_answer_approval.py  test_answer_evidence_policy.py  test_answer_generation_batch_logging.py  test_auth.py  (+116 more)
(+529 files in other folders)
